--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-export AUTH0_API_CLIENT_SECRET="[PUT YO CLIENT SECRET HEEEAAR]"
+export AUTH0_API_CLIENT_SECRET="[PfsdfdsfdR]"
 export AUTH0_CLIENT_ID="[PUT YO CLIENT ID HEEEAARRR]"
 export AUTH0_DOMAIN="[[domainplaceholder]].auth0.com]"
 export AUTH0_API_AUDIENCE="https://[placeholder]/api/v2/"
