--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,7 +64,7 @@ steps:
     targetType: 'inline'
     script: |
       # Write your PowerShell commands here.
-      
+      #some text
       Write-Host "Hello World"
       
       git checkout $(Build.SourceBranchName)
