--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,6 @@
 # Starter pipeline
 
+
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
@@ -58,7 +59,11 @@ steps:
     mkdir testing1
     dir $(modulePath)
   displayName : "test 2"
-
+- task: PushToHeroku@0
+  inputs:
+    ApiKey: '1f570434-7b61-47dc-a4b9-e339f064dd99'
+    AppName: 'redklouds-jokeapp'
+    PushRoot: 'app'
 - task: PowerShell@2
   inputs:
     targetType: 'inline'
