--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -24,6 +24,9 @@
 #   go-tests = true
 #   unused-packages = true
 
+[metadata.heroku]
+  root-package = "redklouds.com/redklouds/golang-gin"
+  
 
 [prune]
   go-tests = true
