--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -81,6 +81,8 @@ steps:
     repository: $(imageName)
     command: build
     Dockerfile: $(modulePath)/Dockerfile
+    tags: |
+      $(tag)
 
 
 - script: |
