--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -76,11 +76,15 @@ steps:
 
 
 - task: Docker@2
-  displayName: Build an image
+  displayName: Build and push image to container registry
   inputs:
     repository: $(imageName)
-    command: build
+    command: buildAndPush
+    containerRegistry: AzureContainerRegistry
     Dockerfile: $(modulePath)/Dockerfile
+    tags: |
+      $(Build.BuildId)
+      latest
 
 
 
