Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,7 +53,7 @@ steps:
 
 - script: go build -v .
   displayName: 'Build Golang Source'
-  workingDirectory: '$(GOPATH/src)'
+  workingDirectory: '$(GOPATH)/src'
   #workingDirectory: '$(modulePath)'
 
 
