--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,8 @@ variables:
   #GOPATH: '$(system.defaultWorkingDirectory)/gopath' # Go workspace path
   #so VM/goPath/HERE IS your workspace
   GOPATH: '$(system.defaultWorkingDirectory)/gopath'
-  modulePath: '$(GOPATH)/src/github.com/$(build.repository.name)' # Path to the module's code
+  modulePath: '$(GOPATH)/src/github.com/$(build.repository.name)'
+  #modulePath: '$(GOPATH)/src/github.com/$(build.repository.name)' # Path to the module's code
   imageName: 'React-GoLang-Img'
   DOCKER_BUILDKIT: 1
     
@@ -53,8 +54,8 @@ steps:
 
 - script: go build -v .
   displayName: 'Build Golang Source'
-  workingDirectory: '$(GOPATH)/src'
-  #workingDirectory: '$(modulePath)'
+  #workingDirectory: '$(GOPATH)/src'
+  workingDirectory: '$(modulePath)'
 
 
 
